--- a/daily-report/src/main/resources/application.properties
+++ b/daily-report/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=daily-report
-spring.datasource.url=jdbc:mysql://localhost:8889/daily-report
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://localhost:8889/daily-report
+spring.datasource.username=postgres_admin
+spring.datasource.password=postgres_password
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 server.port=8082
