add auth with api token

--- a/config-server/src/main/resources/configurations/application.yml
+++ b/config-server/src/main/resources/configurations/application.yml
@@ -9,6 +9,7 @@ spring:
     config:
       override.system-properties: false
 jwt:
+  api-secret: api_monitoring101monitoring202monitoring303_api
   secret: monitoring101monitoring202monitoring303
   access-expiration: 900000 # 15 минут
   refresh-expiration: 86400000 # 1 день
