add mode report service and indexing via taxpayerNumber

--- a/config-server/src/main/resources/configurations/api-gateway.yml
+++ b/config-server/src/main/resources/configurations/api-gateway.yml
@@ -13,6 +13,10 @@ spring:
           uri: lb://DAILY-REPORT
           predicates:
             - Path=/api/v1/daily-report/**
+        - id: mode-report-service
+          uri: lb://MODE-REPORT
+          predicates:
+            - Path=/api/v1/mode-report/**
         - id: auth-server
           uri: lb://AUTH-SERVER
           predicates:
