--- a/daily-report/src/main/resources/application.yml
+++ b/daily-report/src/main/resources/application.yml
@@ -1,5 +1,13 @@
 spring:
   application:
     name: daily-report
+  cloud:
+    consul:
+      host: localhost
+      port: 8500
+      discovery:
+        enabled: true
+      config:
+        enabled: true
   config:
-    import: optional:configserver:http://localhost:8888
+    import: "consul:"
