--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,5 +1,14 @@
 spring:
   application:
     name: api-gateway
+  cloud:
+    consul:
+      host: localhost
+      port: 8500
+      discovery:
+        enabled: true
+      config:
+        enabled: true
+        format: yaml
   config:
-    import: optional:configserver:http://localhost:8888
+    import: "consul:"
