--- a/config-server/src/main/resources/configurations/application.yml
+++ b/config-server/src/main/resources/configurations/application.yml
@@ -1,15 +1,5 @@
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-spring:
-  cloud:
-    config:
-      override.system-properties: false
-jwt:
-  api-secret: api_monitoring101monitoring202monitoring303_api
-  secret: monitoring101monitoring202monitoring303
+security:
+  access-token-secret-key: api_monitoring101monitoring202monitoring303_api
+  api-token-secret-key: monitoring101monitoring202monitoring303
   access-expiration: 900000 # 15 минут
   refresh-expiration: 86400000 # 1 день
