--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
       port: 8500
       discovery:
         enabled: true
+        instance-id: api-gateway:${random.uuid}
       config:
         enabled: true
         format: yaml
