--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,6 +83,14 @@ services:
       - consul-agent-data:/consul/data
     networks:
       - consul-network
+  redis:
+    image: redis:7.0
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    restart: always
 volumes:
   mode_postgres_data:
     driver: local
@@ -95,6 +103,8 @@ volumes:
   consul-server-data:
     driver: local
   consul-agent-data:
+    driver: local
+  redis_data:
     driver: local
 
 networks:
