add ftp util for saving xml reports

--- a/five-minute-report/pom.xml
+++ b/five-minute-report/pom.xml
@@ -114,6 +114,11 @@
 			<artifactId>spring-rabbit-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<version>3.10.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
