--- a/daily-report/pom.xml
+++ b/daily-report/pom.xml
@@ -115,6 +115,11 @@
 			<artifactId>spring-rabbit-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<version>3.10.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
