--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,91 @@
 version: '3.8'
 
 services:
+  api-gateway:
+    build:
+      context: .
+      dockerfile: api-gateway/Dockerfile
+    container_name: api-gateway
+    ports:
+      - "8080:8080"
+    depends_on:
+      - config-server
+    networks:
+      - consul-network
+  auth-server:
+    build:
+      context: .
+      dockerfile: auth-server/Dockerfile
+    container_name: auth-server
+    ports:
+      - "8083:8083"
+    depends_on:
+      - user_db
+      - config-server
+    networks:
+      - rabbitmq-net
+      - consul-network
+  config-server:
+    build:
+      context: .
+      dockerfile: config-server/Dockerfile
+    container_name: config-server
+    ports:
+      - "8888:8888"
+    depends_on:
+      - consul-agent
+    networks:
+      - consul-network
+  daily-report:
+    build:
+      context: .
+      dockerfile: daily-report/Dockerfile
+    container_name: daily-report
+    ports:
+      - "8082:8082"
+    depends_on:
+      - daily-report_db
+      - config-server
+    networks:
+      - consul-network
+      - rabbitmq-net
+  five-minute-report:
+    build:
+      context: .
+      dockerfile: five-minute-report/Dockerfile
+    container_name: five-minute-report
+    ports:
+      - "8081:8081"
+    depends_on:
+      - five-minute-report_db
+      - config-server
+    networks:
+      - consul-network
+      - rabbitmq-net
+  mail-service:
+    build:
+      context: .
+      dockerfile: mail-service/Dockerfile
+    container_name: mail-service
+    ports:
+      - "8100:8100"
+    depends_on:
+      - config-server
+    networks:
+      - consul-network
+      - rabbitmq-net
+  mode-report:
+    build:
+      context: .
+      dockerfile: mode-report/Dockerfile
+    container_name: mode-report
+    ports:
+      - "8084:8084"
+    depends_on:
+      - mode-report_db
+    networks:
+      - consul-network
+      - rabbitmq-net
   user_db:
     image: postgres
     container_name: user_db
