--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,3 +1,13 @@
+FROM maven:3.9.9-eclipse-temurin-17 AS builder
+
+WORKDIR /build
+
+COPY pom.xml .
+
+COPY src ./src
+
+RUN mvn clean package -DskipTests
+
 FROM openjdk:17-jdk-slim
 
 WORKDIR /app
