--- a/five-minute-report/Dockerfile
+++ b/five-minute-report/Dockerfile
@@ -12,7 +12,7 @@ FROM openjdk:17-jdk-slim
 
 WORKDIR /app
 
-COPY target/five-minute-report-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=builder /build/target/*.jar app.jar
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
 
