fix cors and ad admin init

--- a/auth-server/src/main/resources/application.yml
+++ b/auth-server/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: auth-server
   cloud:
     consul:
-      host: localhost
+      host: consul-server
       port: 8500
       discovery:
         enabled: true
