--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -3,11 +3,10 @@ spring:
     name: api-gateway
   cloud:
     consul:
-      host: localhost
+      host: consul-server
       port: 8500
       discovery:
         enabled: true
-        instance-id: api-gateway:${random.uuid}
       config:
         enabled: true
         format: yaml
