--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: config-server
   cloud:
     consul:
-      host: localhost
+      host: consul-server
       port: 8500
       config:
         enabled: true
