--- a/mail-service/src/main/resources/application.yml
+++ b/mail-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: mail-service
   cloud:
     consul:
-      host: localhost
+      host: consul-server
       port: 8500
       discovery:
         enabled: true
