--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
     container_name: auth-server
     ports:
       - "8083:8083"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - user_db
       - config-server
@@ -38,6 +40,8 @@ services:
     container_name: daily-report
     ports:
       - "8082:8082"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - daily-report_db
       - config-server
@@ -49,6 +53,8 @@ services:
     container_name: five-minute-report
     ports:
       - "8081:8081"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - five-minute-report_db
       - config-server
@@ -70,6 +76,8 @@ services:
     container_name: mode-report
     ports:
       - "8084:8084"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - mode-report_db
       - config-server
