--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     ports:
       - "8083:8083"
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - unix:///var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - user_db
       - config-server
@@ -41,7 +41,7 @@ services:
     ports:
       - "8082:8082"
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - unix:///var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - daily-report_db
       - config-server
@@ -54,7 +54,7 @@ services:
     ports:
       - "8081:8081"
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - unix:///var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - five-minute-report_db
       - config-server
@@ -77,7 +77,7 @@ services:
     ports:
       - "8084:8084"
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - unix:///var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - mode-report_db
       - config-server
