edit docker dependency for services in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
     container_name: auth-server
     ports:
       - "8083:8083"
+    environment:
+      DOCKER_HOST: unix:///var/run/docker.sock
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
@@ -40,6 +42,8 @@ services:
     container_name: daily-report
     ports:
       - "8082:8082"
+    environment:
+      DOCKER_HOST: unix:///var/run/docker.sock
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
@@ -53,6 +57,8 @@ services:
     container_name: five-minute-report
     ports:
       - "8081:8081"
+    environment:
+      DOCKER_HOST: unix:///var/run/docker.sock
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
@@ -76,6 +82,8 @@ services:
     container_name: mode-report
     ports:
       - "8084:8084"
+    environment:
+      DOCKER_HOST: unix:///var/run/docker.sock
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
