--- a/five-minute-report/Dockerfile
+++ b/five-minute-report/Dockerfile
@@ -1,12 +1,14 @@
 FROM maven:3.9.9-eclipse-temurin-17 AS builder
 
+RUN apt-get update && apt-get install -y docker.io
+
 WORKDIR /build
 
 COPY pom.xml .
-
 COPY src ./src
 
-RUN mvn clean package
+RUN service docker start && \
+    mvn clean package
 
 FROM openjdk:17-jdk-slim
 
