--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - "8083:8083"
     environment:
       DOCKER_HOST: unix:///var/run/docker.sock
+      TESTCONTAINERS_HOST_OVERRIDE: host.docker.internal
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
@@ -44,6 +45,7 @@ services:
       - "8082:8082"
     environment:
       DOCKER_HOST: unix:///var/run/docker.sock
+      TESTCONTAINERS_HOST_OVERRIDE: host.docker.internal
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
@@ -59,6 +61,7 @@ services:
       - "8081:8081"
     environment:
       DOCKER_HOST: unix:///var/run/docker.sock
+      TESTCONTAINERS_HOST_OVERRIDE: host.docker.internal
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
@@ -84,6 +87,7 @@ services:
       - "8084:8084"
     environment:
       DOCKER_HOST: unix:///var/run/docker.sock
+      TESTCONTAINERS_HOST_OVERRIDE: host.docker.internal
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
