--- a/daily-report/Dockerfile
+++ b/daily-report/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /build
 COPY pom.xml .
 COPY src ./src
 
-RUN mvn clean package
+RUN mvn clean package -DskipTests
 
 FROM openjdk:17-jdk-slim
 
