--- a/five-minute-report/Dockerfile
+++ b/five-minute-report/Dockerfile
@@ -1,13 +1,11 @@
 FROM maven:3.9.9-eclipse-temurin-17 AS builder
 
-VOLUME /var/run/docker.sock
-
 WORKDIR /build
 
 COPY pom.xml .
 COPY src ./src
 
-RUN mvn clean package
+RUN mvn clean package -DskipTests
 
 FROM openjdk:17-jdk-slim
 
