change api gateway to https

--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -3,7 +3,6 @@ FROM maven:3.9.9-eclipse-temurin-17 AS builder
 WORKDIR /build
 
 COPY pom.xml .
-
 COPY src ./src
 
 RUN mvn clean package -DskipTests
@@ -13,7 +12,8 @@ FROM openjdk:17-jdk-slim
 WORKDIR /app
 
 COPY --from=builder /build/target/*.jar app.jar
+COPY --from=builder /build/src/main/resources/keystore.p12 /app/keystore.p12
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
 
-EXPOSE 8080
+EXPOSE 8080 8443
