--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -144,6 +144,13 @@ services:
       -node=server-1
       -client=0.0.0.0
       -ui
+      -enable-script-checks=true
+      -datacenter=dc1
+      -encrypt="your-gossip-key"
+      -acl-default-policy="deny"
+      -acl-enable-token-persistence=true
+      -acl-master-token="your-master-token"
+      -acl-enable=true
     volumes:
       - consul-server-data:/consul/data
       - ./config/config.json:/consul/config/config.json
@@ -161,6 +168,7 @@ services:
       -data-dir=/consul/data
       -client=0.0.0.0
       -retry-join=consul-server
+      -acl-enabled=true
     volumes:
       - consul-agent-data:/consul/data
     networks:
