add ACL tokens for services

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -7,10 +7,12 @@ spring:
       port: 8500
       config:
         enabled: true
+        acl-token: "61a2b669-7242-27c0-5314-9fad53bb5a8e"
       discovery:
         enabled: true
         register: true
         service-name: config-server
+        acl-token: "61a2b669-7242-27c0-5314-9fad53bb5a8e"
   config:
     import: "consul:"
 server:
