--- a/auth-server/src/main/resources/application.yml
+++ b/auth-server/src/main/resources/application.yml
@@ -9,9 +9,11 @@ spring:
       port: 8500
       discovery:
         enabled: true
+        acl-token: "7b3fe245-8649-4071-4f14-e4d187760647"
       config:
         enabled: true
         format: key_value
+        acl-token: "7b3fe245-8649-4071-4f14-e4d187760647"
 
 springdoc:
   api-docs:
