--- a/daily-report/src/main/resources/application.yml
+++ b/daily-report/src/main/resources/application.yml
@@ -10,6 +10,7 @@ spring:
         acl-token: "3bcb67bb-7d6f-8261-b8e6-e40b31483124"
       config:
         enabled: true
+        format: key_value
         acl-token: "3bcb67bb-7d6f-8261-b8e6-e40b31483124"
   config:
     import: "consul:"
