--- a/five-minute-report/src/main/resources/application.yml
+++ b/five-minute-report/src/main/resources/application.yml
@@ -10,6 +10,7 @@ spring:
         acl-token: "13b048a0-84ba-4389-53a9-ddcc08d5589d"
       config:
         enabled: true
+        format: key_value
         acl-token: "13b048a0-84ba-4389-53a9-ddcc08d5589d"
   config:
     import: "consul:"
