--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -15,6 +15,8 @@ spring:
         register: true
         service-name: config-server
         acl-token: "3a4ecff8-c781-4103-8911-355fb51e4a6c"
+  config:
+    import: "optional:consul:"
 management:
   endpoints:
     web:
