--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8888
 spring:
   application:
     name: config-server
@@ -10,7 +12,6 @@ spring:
         acl-token: "61a2b669-7242-27c0-5314-9fad53bb5a8e"
       discovery:
         enabled: true
-        register: true
         acl-token: "61a2b669-7242-27c0-5314-9fad53bb5a8e"
   config:
     import: "consul:"
